--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
 defusedxml==0.5.0
 Django==2.1.7
 djangorestframework==3.9.2
+gcloud==0.17.0
+googleapis-common-protos==1.5.8
+httplib2==0.12.1
+jws==0.1.3
 mysqlclient==1.4.2.post1
+oauth2client==3.0.0
 oauthlib==3.0.1
 Pillow==5.4.1
 pkg-resources==0.0.0
+protobuf==3.7.0
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
+pycryptodome==3.4.3
+Pyrebase==3.0.27
+python-jwt==2.0.1
 python3-openid==3.1.0
 pytz==2018.9
+requests==2.11.1
 requests-oauthlib==1.2.0
+requests-toolbelt==0.7.0
+rsa==4.0
 six==1.12.0
